--- a/package.json
+++ b/package.json
@@ -6,5 +6,15 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LambdaSchool/web-guided-project-dom-2.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/web-guided-project-dom-2/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/web-guided-project-dom-2#readme"
 }
