--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "web-guided-project-dom-2",
   "version": "1.0.0",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel src/index.html"
   },
   "devDependencies": {
+    "eslint": "^7.4.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {},
