--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "devDependencies": {
     "eslint": "^8.10.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel": "^2.12.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BloomInstituteOfTechnology/web-guided-project-dom-2.git"
   },
-  "license": "ISC"
+  "license": "MIT"
 }
